create meetup resources and integration test