@@ -3,16 +3,21 @@ package com.company.app.meetups;
 import static org.springframework.http.HttpStatus.CREATED;
 
 import java.util.Collection;
+import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.company.app.meetups.Meetup.MeetupCreated;
+import com.company.app.common.RestDataResponse;
 
 import lombok.RequiredArgsConstructor;
 
@@ -24,17 +29,36 @@ public class MeetupResource {
     private final MeetupService service;
 
     @PostMapping
-    public ResponseEntity<MeetupResponse> save(@RequestBody MeetupRequest userRequest) {
-        final MeetupCreated meetup = service.create(userRequest);
-        return new ResponseEntity<MeetupResponse>(MeetupResponse.from(meetup), CREATED);
+    public ResponseEntity<RestDataResponse<MeetupResponse>> save(@RequestBody MeetupRequest userRequest) {
+        final Meetup meetup = service.create(userRequest);
+        return new ResponseEntity<>(
+                new RestDataResponse<>(MeetupResponse.from(meetup)), CREATED);
+    }
+
+    @GetMapping("/{id}")
+    public RestDataResponse<MeetupResponse> get(@PathVariable String id) {
+        final Meetup meetup = service.findById(id);
+        return new RestDataResponse<>(MeetupResponse.from(meetup));
+    }
+
+    @PutMapping("/{id}")
+    public RestDataResponse<MeetupResponse> update(@PathVariable String id, @RequestBody MeetupRequest userRequest) {
+        final Meetup meetup = service.update(id, userRequest);
+        return new RestDataResponse<>(MeetupResponse.from(meetup));
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Object> delete(@PathVariable String id) {
+        service.delete(id);
+        return ResponseEntity.noContent().build();
     }
 
     @GetMapping
-    public Collection<MeetupResponse> all() {
-        final Collection<MeetupCreated> meetups = service.all();
-        return meetups.stream()
+    public RestDataResponse<List<MeetupResponse>> all() {
+        final Collection<Meetup> meetups = service.all();
+        return new RestDataResponse<>(meetups.stream()
                 .map(MeetupResponse::from)
-                .toList();
+                .collect(Collectors.toList()));
     }
 
 }
